--- a/templates/chat.html
+++ b/templates/chat.html
@@ -15,7 +15,7 @@
         </div>
         <div class="chat-window" id="chatWindow">
             <div class="message bot">
-                <span>Olá! Como posso ajudar você hoje?</span>
+                <span>Olá, sou o DivinnoBot e estou aqui para te ajudar a descobrir qual o melhor tipo de vinho para a sua ocasião! Descreva por favor para mim qual a sua ocasião, emoção, senação, etc. Faça uma descrição detalhada e te direi qual o melhor tipo de vinho!</span>
             </div>
         </div>
         <div class="chat-input">
