--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,9 @@
     </div>
 
     <h1>Descubra o SEU VINHO Ideal</h1>
-    <h3 class="h3-garrafa">(Clique na Garrafa de Vinho abaixo)</h3>
+    <div class="seta" >
+        <img style="width: 5%;" src="../static/img/seta.png" alt="seta"></img>
+    </div>
 
     <div>
         <div id="plate">
