--- a/static/css/index.css
+++ b/static/css/index.css
@@ -21,9 +21,10 @@ h2, h3 {
     margin: 0;
 }
 
-.h3-garrafa {
-    text-align: center;
-    color: white;
+.seta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .sobre, .contato {
