--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,6 +10,49 @@ body {
     font-family: 'Arial', sans-serif;
 }
 
+/* Estilo do modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 500;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    width: 300px;
+}
+
+/* Desabilitar os links Cardápio e Contato */
+.nav-list .cardapio, .nav-list .contato, separator {
+    pointer-events: none;
+    cursor: not-allowed;
+    color: grey; /* Muda a cor para indicar que o link está desativado */
+}
+
+button {
+    background-color: #722F37;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #8c3b47;
+}
 
 .logo-container button,
 .logo-container a {
